-Fixed field alignment in eoDetails. -Added snackbar for userfeedback

--- a/designer/designer-frontend/src/app/procedure-eo/procedure-eo.component.css
+++ b/designer/designer-frontend/src/app/procedure-eo/procedure-eo.component.css
@@ -24,11 +24,14 @@
 .eoField {
   margin: 20px;
 }
+.eoField2 {
+  margin:0;
+}
 .eoContainer {
   display:flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
 
 }
 .mat-expansion-panel-header {
